<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >
  <android.support.v7.preference.PreferenceCategory
    android:key="normal"
    android:title="@string/normal">
    <android.support.v7.preference.CheckBoxPreference
      android:defaultValue="true"
      android:key="ignore_premission"
      android:title="@string/auto_ignore_premission"
      android:summary="@string/auto_ignore_summary"/>

    <android.support.v7.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="show_ignore_dialog"
        android:title="@string/show_ignore_dialog"
        android:summary="@string/show_ignore_dialog_summary"/>

    <android.support.v7.preference.Preference
      android:key="ignore_premission_templete"
      android:title="@string/auto_ignore_permission_title"
      android:summary="@string/auto_ignore_permission_temp_summary"/>

    <android.support.v7.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="ifw_enabled"
        android:title="@string/ifw_disable_title"
        android:summary="@string/ifw_disable_summary"/>
  </android.support.v7.preference.PreferenceCategory>

  <android.support.v7.preference.PreferenceCategory
    android:key="app_ui"
    android:title="@string/app_ui">
    <android.support.v7.preference.CheckBoxPreference
      android:defaultValue="false"
      android:key="show_sysapp"
      android:title="@string/show_sys_apps"
      android:summary="@string/show_sys_apps_summary"/>
    <android.support.v7.preference.Preference
      android:key="pref_app_sort_type"
      android:title="@string/app_sort_type"
      android:summary="@string/app_sort_type_summary"/>

    <android.support.v7.preference.SwitchPreferenceCompat
      android:key="pref_app_daynight_mode"
      android:title="@string/app_daynight_mode"
      android:summary="@string/app_daynight_mode_summary"
      />

    <android.support.v7.preference.Preference
      android:key="pref_app_language"
      android:title="@string/app_language"
      />
    <!--<Preference-->
    <!--android:key="app_perm_detail"-->
    <!--android:title="@string/app_perm_detail_summary"-->
    <!--android:summary="@string/app_perm_detail_title" />-->
  </android.support.v7.preference.PreferenceCategory>

  <!--<PreferenceCategory android:key="experience" android:title="@string/experience">-->


  <!--</PreferenceCategory>-->

  <android.support.v7.preference.PreferenceCategory
      android:key="others"
      android:title="@string/others">
    <android.support.v7.preference.Preference
        android:key="pref_install_system"
        android:title="@string/install_system_title"
        android:summary="@string/install_system_summary"
        />
  </android.support.v7.preference.PreferenceCategory>

  <android.support.v7.preference.PreferenceCategory
    android:key="about"
    android:title="@string/about">
    <android.support.v7.preference.Preference
      android:key="version"
      android:title="@string/version"/>
    <android.support.v7.preference.Preference
      android:key="project"
      android:summary="https://github.com/linusyang92/AppOpsX"
      android:title="Github">
      <intent
        android:action="android.intent.action.VIEW"
        android:data="https://github.com/linusyang92/AppOpsX"/>
    </android.support.v7.preference.Preference>
    <android.support.v7.preference.Preference
      android:key="translate"
      android:title="@string/original_github"
      android:summary="https://github.com/8enet/AppOpsX">
      <intent
        android:action="android.intent.action.VIEW"
        android:data="https://github.com/8enet/AppOpsX"/>
    </android.support.v7.preference.Preference>
    <android.support.v7.preference.Preference
        android:key="acknowledgments"
        android:summary="@string/acknowledgment_description"
        android:title="@string/acknowledgment"/>

  </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>