<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@android:string/search_go"/>
    <item
        android:id="@+id/action_show_broadcast"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"
        android:title="@string/menu_show_broadcast"/>
    <item
        android:id="@+id/action_show_full_name"
        app:showAsAction="never"
        android:checkable="true"
        android:title="@string/menu_show_full_name"/>
    <item
        android:id="@+id/action_service_enable_all"
        app:showAsAction="never"
        android:title="@string/menu_service_enable_all"/>
    <item
        android:id="@+id/action_service_disable_all"
        app:showAsAction="never"
        android:title="@string/menu_service_disable_all"/>
    <item
        android:id="@+id/action_service_app_info"
        app:showAsAction="never"
        android:title="@string/menu_app_info"/>
</menu>